--- a/.github/workflows/build-lightspeed-rag-containers.yaml
+++ b/.github/workflows/build-lightspeed-rag-containers.yaml
@@ -14,13 +14,10 @@ env:
 
 jobs:
   build-arm64-nvidia:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm64
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -57,13 +54,10 @@ jobs:
             CODE_VERSION=${{ steps.version.outputs.version }}
 
   build-arm64-apple-silicon:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm64
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -139,49 +133,10 @@ jobs:
           build-args: |
             CODE_VERSION=${{ steps.version.outputs.version }}
 
-  build-amd64-generic:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Quay.io
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
-
-      - name: Extract version from tag
-        id: version
-        run: |
-          if [[ "${{ github.ref_type }}" == "tag" ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-            echo "version=${VERSION}" >> $GITHUB_OUTPUT
-            echo "is_tag=true" >> $GITHUB_OUTPUT
-          else
-            echo "version=pr-${{ github.event.number }}" >> $GITHUB_OUTPUT
-            echo "is_tag=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Build container
-        uses: docker/build-push-action@v5
-        with:
-          context: ./containers/lightspeed-rag
-          file: ./containers/lightspeed-rag/Containerfile.generic
-          platforms: linux/amd64
-          push: ${{ steps.version.outputs.is_tag }}
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:rag-model-generic-amd64.${{ steps.version.outputs.version }}
-          build-args: |
-            CODE_VERSION=${{ steps.version.outputs.version }}
 
   create-manifests:
     runs-on: ubuntu-latest
-    needs: [build-arm64-nvidia, build-arm64-apple-silicon, build-amd64-nvidia, build-amd64-generic]
+    needs: [build-arm64-nvidia, build-arm64-apple-silicon, build-amd64-nvidia]
     if: github.ref_type == 'tag'
     steps:
       - name: Login to Quay.io
@@ -216,9 +171,10 @@ jobs:
 
           docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:rag-model-apple-silicon
 
-          # Create generic manifest (amd64 only for now)
+          # Create generic manifest (uses nvidia images as fallback)
           docker manifest create \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:rag-model-generic \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:rag-model-generic-amd64.${VERSION}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:rag-model-nvidia-amd64.${VERSION} \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:rag-model-nvidia-arm64.${VERSION}
 
           docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:rag-model-generic
