--- a/.github/workflows/build-lightspeed-rag-containers.yaml
+++ b/.github/workflows/build-lightspeed-rag-containers.yaml
@@ -14,10 +14,13 @@ env:
 
 jobs:
   build-arm64-nvidia:
-    runs-on: ubuntu-24.04-arm64
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -54,10 +57,13 @@ jobs:
             CODE_VERSION=${{ steps.version.outputs.version }}
 
   build-arm64-apple-silicon:
-    runs-on: ubuntu-24.04-arm64
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
